<resources>
    <string name="app_name">My Movies App</string>
    <string name="invalidParse">Invalid parseing of date, please contact app developer for further details.</string>
    <string name="videos">Videos</string>
    <string name="yourRating">Your\nRating</string>
    <string name="notYetRated">Not Yet Rated</string>
    <string name="cast">Cast</string>
    <string name="search">Search</string>
    <string name="action_settings">My Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Movie categories -->
    <string name="movie_category_popular">popular</string>
    <string name="movie_category_top_rated">top_rated</string>
    <string name="movie_category_now_playing">now_playing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="knownFor">Known for</string>
    <string name="tvSeries">TV Series</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="rate_movie">Rate movie</string>
    <string name="reviews">Reviews</string>
    <string name="ok">Ok</string>
    <string name="detailedOverview">Detailed overview</string>
    <string name="detaildedBiography">Detailed biography</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="login">Login</string>
    <string name="actions">Actions</string>
    <string name="refresh">Refresh</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="favorites">Favorites</string>
    <string name="you_need_to_be_logged_in">You need to be logged in</string>
    <string name="search_hint">Search movies, tv shows and actors</string>
    <string name="no_results">No results</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="send_to">Send to:</string>
</resources>
