<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/clLoginCoordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbLoginToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/AppToolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <ScrollView
            android:layout_below="@id/tbLoginToolbar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="40dp"
                    android:id="@+id/ilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etUsername"
                        android:hint="@string/username"
                        android:text="faruk.ljuca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ilPassword"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/ilUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPassword"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:text="password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btLogin"
                    android:layout_below="@id/ilPassword"
                    android:layout_alignParentRight="true"
                    android:text="@string/login"
                    android:gravity="center"
                    android:textColor="@color/customred"
                    android:onClick="login_Click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvLoginError"
                    android:layout_toLeftOf="@id/btLogin"
                    android:layout_alignParentLeft="true"
                    android:gravity="center"
                    android:layout_alignBaseline="@id/btLogin"
                    android:textColor="@color/customred"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvResetPassword"
                    android:text="@string/forgot_password"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/btLogin"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btResetPassword"
                    android:layout_below="@id/tvResetPassword"
                    android:layout_centerHorizontal="true"
                    android:text="@string/reset_password"
                    android:gravity="center"
                    android:textColor="@color/customred"
                    android:onClick="resetPassword_Click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/tvDontHaveAnAccount"
                    android:layout_below="@id/btResetPassword"
                    android:layout_centerHorizontal="true"
                    android:text="@string/dont_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:layout_below="@id/tvDontHaveAnAccount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:text="@string/sign_up"
                    android:gravity="center"
                    android:textColor="@color/customred"
                    android:onClick="signUp_Click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>